[package]
name = "adventofcode2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "day-1-problem-1"
path = "src/bin/day-01/problem1.rs"
[[bin]]
name = "day-1-problem-2"
path = "src/bin/day-01/problem2.rs"
