[package]
name = "adventofcode2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "day-1-problem-1"
path = "src/bin/day-01/problem1.rs"
[[bin]]
name = "day-1-problem-2"
path = "src/bin/day-01/problem2.rs"

[[bin]]
name = "day-2-problem-1"
path = "src/bin/day-02/problem1.rs"
[[bin]]
name = "day-2-problem-2"
path = "src/bin/day-02/problem2.rs"

[[bin]]
name = "day-3-problem-1"
path = "src/bin/day-03/problem1.rs"
[[bin]]
name = "day-3-problem-2"
path = "src/bin/day-03/problem2.rs"

[[bin]]
name = "day-4-problem-1"
path = "src/bin/day-04/problem1.rs"
[[bin]]
name = "day-4-problem-2"
path = "src/bin/day-04/problem2.rs"

[[bin]]
name = "day-5-problem-1"
path = "src/bin/day-05/problem1.rs"
[[bin]]
name = "day-5-problem-2"
path = "src/bin/day-05/problem2.rs"

[[bin]]
name = "day-6-problem-1"
path = "src/bin/day-06/problem1.rs"
[[bin]]
name = "day-6-problem-2"
path = "src/bin/day-06/problem2.rs"

[[bin]]
name = "day-7-problem-1"
path = "src/bin/day-07/problem1.rs"
[[bin]]
name = "day-7-problem-2"
path = "src/bin/day-07/problem2.rs"

[[bin]]
name = "day-8-problem-1"
path = "src/bin/day-08/problem1.rs"
[[bin]]
name = "day-8-problem-2"
path = "src/bin/day-08/problem2.rs"
